--- a/HotelProjectUILayer/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
+++ b/HotelProjectUILayer/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
@@ -1,12 +1,27 @@
 ﻿<div class="nk-sidebar">
     <div class="nk-nav-scroll">
         <ul class="metismenu" id="menu">
- <li class="nav-label">UI Components</li>
+            <li class="nav-label">UI Components</li>
             <li>
-                <a href="widgets.html" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Widget</span>
+                <a href="/Login/SignUp" aria-expanded="false">
+                    <i class="icon-badge menu-icon"></i><span class="nav-text">Kayıt Ol</span>
                 </a>
             </li>
-            </ul>
+            <li>
+                <a href="/Login/SignIn" aria-expanded="false">
+                    <i class="icon-badge menu-icon"></i><span class="nav-text">Giriş Yap</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Service/Index" aria-expanded="false">
+                    <i class="icon-badge menu-icon"></i><span class="nav-text">Hizmetlerimiz</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Staff/Index" aria-expanded="false">
+                    <i class="icon-badge menu-icon"></i><span class="nav-text">Personelimiz</span>
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
