--- a/HotelProjectUILayer/Views/Shared/_Layout.cshtml
+++ b/HotelProjectUILayer/Views/Shared/_Layout.cshtml
@@ -17,22 +17,22 @@
     <div id="main-wrapper">
 
         <!--**********************************
-        Nav header start
-    ***********************************-->
+            Nav header start
+        ***********************************-->
         <partial name="~/Views/Shared/AdminPartialView/_NavbarPartial.cshtml" />
         <!--**********************************
-        Header end ti-comment-alt
-    ***********************************-->
+            Header end ti-comment-alt
+        ***********************************-->
         <!--**********************************
-        Sidebar start
-    ***********************************-->
+            Sidebar start
+        ***********************************-->
         <partial name="~/Views/Shared/AdminPartialView/_SidebarPartial.cshtml" />
         <!--**********************************
-        Sidebar end
-    ***********************************-->
+            Sidebar end
+        ***********************************-->
         <!--**********************************
-        Content body start
-    ***********************************-->
+            Content body start
+        ***********************************-->
         <div class="content-body">
 
 
@@ -52,15 +52,15 @@
             <!-- #/ container -->
         </div>
         <!--**********************************
-        Content body end
-    ***********************************-->
+            Content body end
+        ***********************************-->
         <!--**********************************
-        Footer start
-    ***********************************-->
+            Footer start
+        ***********************************-->
         <partial name="~/Views/Shared/AdminPartialView/_FooterPartial.cshtml" />
         <!--**********************************
-        Footer end
-    ***********************************-->
+            Footer end
+        ***********************************-->
     </div>
     <!--**********************************
         Main wrapper end
@@ -69,6 +69,7 @@
         Scripts
     ***********************************-->
     <partial name="~/Views/Shared/AdminPartialView/_ScriptPartial.cshtml" />
+    @await RenderSectionAsync("Scripts", required: false)
 
 </body>
 
