--- a/HotelProjectUILayer/Views/_ViewImports.cshtml
+++ b/HotelProjectUILayer/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using HotelProjectUILayer
 @using HotelProjectUILayer.Models
 @using HotelProjectUILayer.Dtos.ServiceDto
+@using DTOLayer.DTOS.LoginDto
+@using DTOLayer.DTOS.RegisterDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
