Layout ve staff admin area’ya taşındı

--- a/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
@@ -3,22 +3,22 @@
         <ul class="metismenu" id="menu">
             <li class="nav-label">UI Components</li>
             <li>
-                <a href="/Login/SignUp" aria-expanded="false">
+                <a href="/Admin/Login/SignUp" aria-expanded="false">
                     <i class="icon-badge menu-icon"></i><span class="nav-text">Kayıt Ol</span>
                 </a>
             </li>
             <li>
-                <a href="/Login/SignIn" aria-expanded="false">
+                <a href="/Admin/Login/SignIn" aria-expanded="false">
                     <i class="icon-badge menu-icon"></i><span class="nav-text">Giriş Yap</span>
                 </a>
             </li>
             <li>
-                <a href="/Service/Index" aria-expanded="false">
+                <a href="/Admin/Service/Index" aria-expanded="false">
                     <i class="icon-badge menu-icon"></i><span class="nav-text">Hizmetlerimiz</span>
                 </a>
             </li>
             <li>
-                <a href="/Staff/Index" aria-expanded="false">
+                <a href="/Admin/Staff/Index" aria-expanded="false">
                     <i class="icon-badge menu-icon"></i><span class="nav-text">Personelimiz</span>
                 </a>
             </li>
