Guest ve Room Admin Area İşlemleri

--- a/HotelProjectUILayer/Areas/Admin/Views/Login/SignIn.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Login/SignIn.cshtml
@@ -31,7 +31,7 @@
                                
                                 <button class="btn login-form__btn submit w-100">Giriş Yap</button>
                             </form>
-                            <p class="mt-5 login-form__footer">Hesabınız Yok Mu <a href="/Login/SignUp" class="text-primary">Kayıt Olun </a> </p>
+                            <p class="mt-5 login-form__footer">Hesabınız Yok Mu <a href="/Admin/Login/SignUp" class="text-primary">Kayıt Olun </a> </p>
                             
                         </div>
                     </div>
