--- a/HotelProjectUILayer/Areas/Admin/Views/Service/Index.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Service/Index.cshtml
@@ -11,8 +11,8 @@
             <tr>
                 <td>@item.title</td>
                 <td>@item.decription</td>
-                <td><a href="/Service/UpdateService/@item.id" class="btn btn-outline-success">Güncelle</a></td>
-                <td><a href="/Service/DeleteService/@item.id" class="btn btn-outline-danger">Sil</a></td>
+                <td><a href="/Admin/Service/UpdateService/@item.id" class="btn btn-outline-success">Güncelle</a></td>
+                <td><a href="/Admin/Service/DeleteService/@item.id" class="btn btn-outline-danger">Sil</a></td>
             </tr>
         }
 
