--- a/HotelProjectUILayer/Areas/Admin/Views/Staff/Index.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Staff/Index.cshtml
@@ -12,8 +12,8 @@
             <tr>
                 <td>@item.name</td>
                 <td>@item.title</td>
-                <td><a href="/Staff/UpdateStaff/@item.id" class="btn btn-outline-primary">Güncelle</a></td>
-                <td><a href="/Staff/DeleteStaff/@item.id" class="btn btn-outline-danger">Sil</a></td>
+                <td><a href="/Admin/Staff/UpdateStaff/@item.id" class="btn btn-outline-primary">Güncelle</a></td>
+                <td><a href="/Admin/Staff/DeleteStaff/@item.id" class="btn btn-outline-danger">Sil</a></td>
             </tr>
         }
 </table>
