--- a/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
@@ -22,6 +22,11 @@
                     <i class="icon-badge menu-icon"></i><span class="nav-text">Personelimiz</span>
                 </a>
             </li>
+            <li>
+                <a href="/Admin/AdminAbout/Index" aria-expanded="false">
+                    <i class="icon-badge menu-icon"></i><span class="nav-text">Rezervasyonlar</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
