--- a/HotelProjectUILayer/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using HotelProjectUILayer.Dtos.RoomDto
 @using HotelProjectUILayer.Dtos.TestimonialDto
 @using HotelProjectUILayer.Dtos.BookingDto
+@using HotelProjectUILayer.Dtos.GuestDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
