Guest  İçin Fluent Validasyon İşlemleri

--- a/HotelProjectUILayer/Areas/Admin/Views/Guest/Index.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Guest/Index.cshtml
@@ -19,4 +19,4 @@
         </tr>
     }
 </table>
-<a href="/Staff/AddStaff" class="btn btn-outline-success">Personel Ekle</a>
+<a href="/Admin/Guest/AddGuest" class="btn btn-outline-success">Misafir Ekle</a>
