API üzerinden resim yükleme işlemleri

--- a/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
@@ -27,6 +27,16 @@
                     <i class="icon-badge menu-icon"></i><span class="nav-text">Rezervasyonlar</span>
                 </a>
             </li>
+            <li>
+                <a href="/Admin/Contact/Inbox" aria-expanded="false">
+                    <i class="icon-clock menu-icon"></i><span class="nav-text">Gelen Kutusu</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Admin/FileImage/Index" aria-expanded="false">
+                    <i class="icon-clock menu-icon"></i><span class="nav-text">Resim Yükleme</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
