--- a/HotelProjectUILayer/Areas/Admin/Views/Login/SignIn.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Login/SignIn.cshtml
@@ -19,13 +19,13 @@
                                
                                 
                                 <div class="form-group">
-                                    <input type="text" class="form-control" asp-for="UserName" placeholder="Kullanıcı Adınız" required>
-                                    <span asp-validation-for="UserName"></span>
+                                    <input type="text" class="form-control" asp-for="Email" placeholder="E Posta Adresiniz" required>
+                                    <span asp-validation-for="Email"></span>
                                 </div>
                                 
                                 
                                 <div class="form-group">
-                                    <input asp-for="Password" class="form-control" placeholder="Şifre" required>
+                                    <input type="password" asp-for="Password" class="form-control" placeholder="Şifre" required>
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                                
