--- a/HotelProjectUILayer/Views/Shared/Components/_DashboardSocialMedia/Default.cshtml
+++ b/HotelProjectUILayer/Views/Shared/Components/_DashboardSocialMedia/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿@model ResultInstagramFollowersDto
+<div class="row">
     <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="social-graph-wrapper widget-facebook">
@@ -7,13 +8,13 @@
             <div class="row">
                 <div class="col-6 border-right">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
+                        <h4 class="m-1">@Model.Following</h4>
                         <p class="m-0">Friends</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
+                        <h4 class="m-1">@Model.Followers</h4>
                         <p class="m-0">Followers</p>
                     </div>
                 </div>
@@ -34,7 +35,7 @@
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
+                        <h4 class="m-1">@ViewBag.Linkendin</h4>
                         <p class="m-0">Followers</p>
                     </div>
                 </div>
