--- a/HotelProjectUILayer/Views/_ViewImports.cshtml
+++ b/HotelProjectUILayer/Views/_ViewImports.cshtml
@@ -11,5 +11,6 @@
 @using HotelProjectUILayer.Dtos.AppUserDto
 @using HotelProjectUILayer.Dtos.WorkLocationDto
 @using HotelProjectUILayer.Dtos.StaffDto
+@using HotelProjectUILayer.Dtos.FolowersDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
