--- a/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/Shared/AdminPartialView/_SidebarPartial.cshtml
@@ -4,22 +4,22 @@
             <li class="nav-label">UI Components</li>
             <li>
                 <a href="/Admin/Dashboard/Index" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Dashboard</span>
+                    <i class="icon-home menu-icon"></i><span class="nav-text">Dashboard</span>
                 </a>
             </li>
             <li>
                 <a href="/Admin/Login/SignUp" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Kayıt Ol</span>
+                    <i class="icon-people menu-icon"></i><span class="nav-text">Kayıt Ol</span>
                 </a>
             </li>
             <li>
                 <a href="/Admin/Login/SignIn" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Giriş Yap</span>
+                    <i class="icon-user-female menu-icon"></i><span class="nav-text">Giriş Yap</span>
                 </a>
             </li>
             <li>
                 <a href="/Admin/Service/Index" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Hizmetlerimiz</span>
+                    <i class="icon-energy menu-icon"></i><span class="nav-text">Hizmetlerimiz</span>
                 </a>
             </li>
             <li>
@@ -28,18 +28,33 @@
                 </a>
             </li>
             <li>
-                <a href="/Admin/AdminAbout/Index" aria-expanded="false">
-                    <i class="icon-badge menu-icon"></i><span class="nav-text">Rezervasyonlar</span>
+                <a href="/Admin/BookingAdmin/Index" aria-expanded="false">
+                    <i class="icon-phone menu-icon"></i><span class="nav-text">Rezervasyonlar</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Admin/Room/Index" aria-expanded="false">
+                    <i class="icon-handbag menu-icon"></i><span class="nav-text">Oda İşlemleri</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Admin/Guest/Index" aria-expanded="false">
+                    <i class="icon-loop menu-icon"></i><span class="nav-text">Misafirlerimiz</span>
                 </a>
             </li>
             <li>
                 <a href="/Admin/Contact/Inbox" aria-expanded="false">
-                    <i class="icon-clock menu-icon"></i><span class="nav-text">Gelen Kutusu</span>
+                    <i class="icon-key menu-icon"></i><span class="nav-text">Gelen Kutusu</span>
                 </a>
             </li>
             <li>
-                <a href="/Admin/FileImage/Index" aria-expanded="false">
-                    <i class="icon-clock menu-icon"></i><span class="nav-text">Resim Yükleme</span>
+                <a href="/Admin/AdminAbout/Index" aria-expanded="false">
+                    <i class="icon-clock menu-icon"></i><span class="nav-text">Hakkımızda</span>
+                </a>
+            </li>
+            <li>
+                <a href="/Admin/ImageFile/Index" aria-expanded="false">
+                    <i class="icon-arrow-up-circle menu-icon"></i><span class="nav-text">Resim Yükleme</span>
                 </a>
             </li>
             <li>
@@ -49,7 +64,7 @@
             </li>
             <li>
                 <a href="/Admin/WorkLocation/Index" aria-expanded="false">
-                    <i class="icon-user-follow menu-icon"></i><span class="nav-text">Otel İşlemleri</span>
+                    <i class="icon-like menu-icon"></i><span class="nav-text">Otel İşlemleri</span>
                 </a>
             </li>
         </ul>
