--- a/HotelProjectUILayer/Views/Shared/Components/_Footer/Default.cshtml
+++ b/HotelProjectUILayer/Views/Shared/Components/_Footer/Default.cshtml
@@ -26,11 +26,10 @@
                     <div class="col-md-6">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Şirketimiz</h6>
                         <a class="btn btn-link" href="">Hakkımızda</a>
-                        <a class="btn btn-link" href="">
-                            Bize Yazınız/a>
+                        <a class="btn btn-link" href="/Contact/Index">Bize Yazınız</a>
                             <a class="btn btn-link" href="">Gizlilik Politikası</a>
                             <a class="btn btn-link" href="">KVKK</a>
-                            <a class="btn btn-link" href="">Destek</a>
+                            <a class="btn btn-link" href="/Contact/Index">Destek</a>
                     </div>
                     <div class="col-md-6">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Hizmetler</h6>
