--- a/HotelProjectUILayer/Areas/Admin/Views/WorkLocation/AddWorkLocation.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/WorkLocation/AddWorkLocation.cshtml
@@ -2,11 +2,11 @@
 <form method="post">
     <div class="form-group">
         <label>Otel İsmi</label>
-        <input type="text" asp-for="name" class="form-control">
+        <input type="text" asp-for="Name" class="form-control">
     </div>
     <div class="form-group">
         <label>Otelin Bulunduğu Şehir</label>
-        <input type="text" asp-for="city" class="form-control">
+        <input type="text" asp-for="City" class="form-control">
     </div>
   
     <button type="submit" class="btn btn-primary">Ekle</button>
