--- a/HotelProjectUILayer/Areas/Admin/Views/WorkLocation/Index.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/WorkLocation/Index.cshtml
@@ -10,10 +10,10 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.name</td>
-            <td>@item.city</td>
-            <td><a href="/Admin/WorkLocation/UpdateWorkLocation/@item.workLocationId" class="btn btn-outline-primary">Güncelle</a></td>
-            <td><a href="/Admin/WorkLocation/DeleteWorkLocation/@item.workLocationId" class="btn btn-outline-danger">Sil</a></td>
+            <td>@item.Name</td>
+            <td>@item.City</td>
+            <td><a href="/Admin/WorkLocation/UpdateWorkLocation/@item.WorkLocationId" class="btn btn-outline-primary">Güncelle</a></td>
+            <td><a href="/Admin/WorkLocation/DeleteWorkLocation/@item.WorkLocationId" class="btn btn-outline-danger">Sil</a></td>
         </tr>
     }
 </table>
