--- a/HotelProjectUILayer/Areas/Admin/Views/WorkLocation/UpdateWorkLocation.cshtml
+++ b/HotelProjectUILayer/Areas/Admin/Views/WorkLocation/UpdateWorkLocation.cshtml
@@ -1,13 +1,13 @@
 ﻿@model UpdateWorkLocationDto
 <form method="post">
-    <input type="hidden" asp-for="workLocationId" />
+    <input type="hidden" asp-for="WorkLocationId" />
     <div class="form-group">
         <label>Hotel İsmi</label>
-        <input type="text" asp-for="name" class="form-control">
+        <input type="text" asp-for="Name" class="form-control">
     </div>
     <div class="form-group">
         <label>Şehir Bilgisi</label>
-        <input type="text" asp-for="city" class="form-control">
+        <input type="text" asp-for="City" class="form-control">
     </div>
     
     <button type="submit" class="btn btn-primary">Güncelle</button>
