--- a/HotelProjectUILayer/Views/Shared/Components/_Navbar/Default.cshtml
+++ b/HotelProjectUILayer/Views/Shared/Components/_Navbar/Default.cshtml
@@ -46,22 +46,16 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="/Default/Index" class="nav-item nav-link active">Anasayfa</a>
-                            <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
+                            <a href="#" class="nav-item nav-link">Hakkımızda</a>
                             <a href="#" class="nav-item nav-link">Hizmetlerimiz</a>
-                            <a href="room.html" class="nav-item nav-link">Odalarımız</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sayfalar</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="booking.html" class="dropdown-item">Rezervasyon</a>
-                                    <a href="#" class="dropdown-item">Ekibimiz</a>
-                                    <a href="testimonial.html" class="dropdown-item">Yorumlar</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">İletişim</a>
-                        </div>
+                            <a href="/Booking/Index" class="nav-item nav-link">Rezervasyon</a>
 
+                        </div>
+                        <a href="/Contact/Index" class="nav-item nav-link">İletişim</a>
                     </div>
                 </nav>
             </div>
+           
+        </div>
         </div>
     </div>
