Proje Resimleri Dosyası Eklendi, API istek sınırı aşıldığından dolayı _DashboardSocialMedia.cs’den çıkartmalar yapıldı

--- a/HotelProjectUILayer/Views/Shared/Components/_AboutUs/Default.cshtml
+++ b/HotelProjectUILayer/Views/Shared/Components/_AboutUs/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@@model List<ResultAboutUsDto>
+﻿@model List<ResultAboutUsDto>
     @foreach (var item in Model)
     {
         <div class="container-xxl py-5">
