--- a/HotelProjectUILayer/Views/Shared/Components/_Navbar/Default.cshtml
+++ b/HotelProjectUILayer/Views/Shared/Components/_Navbar/Default.cshtml
@@ -49,7 +49,7 @@
                             <a href="#" class="nav-item nav-link">Hakkımızda</a>
                             <a href="#" class="nav-item nav-link">Hizmetlerimiz</a>
                             <a href="/Booking/Index" class="nav-item nav-link">Rezervasyon</a>
-
+                            <a href="/Admin/Login/SignIn" class="nav-item nav-link">Giriş Yap</a>
                         </div>
                         <a href="/Contact/Index" class="nav-item nav-link">İletişim</a>
                     </div>
